--- a/CustomFans-Helios/CustomFans-Helios.csproj
+++ b/CustomFans-Helios/CustomFans-Helios.csproj
@@ -57,6 +57,12 @@
   <PropertyGroup>
     <ApplicationIcon>fan-disk-brand-shape_icon-icons.com_59150.ico</ApplicationIcon>
   </PropertyGroup>
+  <PropertyGroup>
+    <TargetZone>LocalIntranet</TargetZone>
+  </PropertyGroup>
+  <PropertyGroup>
+    <GenerateManifests>false</GenerateManifests>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="OpenHardwareMonitorLib">
       <HintPath>..\..\..\..\Downloads\openhardwaremonitor-v0.9.6\OpenHardwareMonitor\OpenHardwareMonitorLib.dll</HintPath>
